<resources>
    <string name="app_name">Negócio na Mão</string>
    <string name="app_version">© 2026 © v2.13.1</string>
    <string name="sales">Vendas</string>
    <string name="reports">Relatórios</string>
    <string name="products_and_services">Produtos e Serviços</string>
    <string name="sale_regist">Registar Vendas</string>
    <string name="discount">Desconto:</string>
    <string name="value">Valor</string>
    <string name="quantity">Qty:</string>
    <string name="total_sale">Valor Total da Venda</string>
    <string name="wait">Aguarde...</string>
    <string name="processing_request">A processar o pedido.</string>
    <string name="products">Produtos</string>
    <string name="required_field">*Campo obrigatório</string>
    <string name="sale_error_on_add_item">Ocorreu um erro ao adicionar o item. Por favor tente novamente!</string>
    <string name="sale_without_item_not_allowed">Não é permitido o registo da venda de sem pelo menos um item adicionado!</string>
    <string name="sale_registed_with_success">O Registo da venda foi realizado com sucesso!</string>
    <string name="sale_error_on_regist">Ocorreu um erro ao registar a venda. por favor tente novamente!</string>
    <string name="sale_error_on_selecting_product">Erro ao seleccionar o producto. Por favor tente novamente</string>
    <string name="sale_no_stock_for_the_product_selected">Não existe stock para o producto seleccinado</string>
    <string name="toolbar_title">Negócio na Mão</string>
    <string name="stocks_and_prices">Stocks e Preços</string>
    <string name="purchase_price">Compra:</string>
    <string name="sale_price">Venda:</string>
    <string name="stock_and_sale_updated_success">Os preços e as quantidades foram actualizados com sucesso!</string>
    <string name="error_on_updating_stock_and_prices">Ocorreu um erro ao actualizar os preços as quantidades. Por favor tente novamente</string>
    <string name="add_item_to_update">Adiciona pelo menos um producto para actualizar!</string>
    <string name="forget_password"><u> Esqueceu a senha? </u></string>
    <string name="bad_credentials">Credências Inválidas</string>
    <string name="hi">Olá</string>
    <string name="date">Data</string>
    <string name="profit">Lucro</string>
    <string name="sale_value">Valor da venda</string>
    <string name="inventory">Inventários</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="approve_inventory">Aprovar Inventário</string>
    <string name="perform_inventory">Realizar Inventário</string>
    <string name="start_date">Data de Início:</string>
    <string name="inventory_status">Estado:</string>
    <string name="error_on_performing_inventory">Ocorreu um erro ao realizar o inventário. Por favor tente novamente.</string>
    <string name="inventory_not_found">Inventory not found</string>
    <string name="pending">Pendente</string>
    <string name="approved">Aprovado</string>
    <string name="inventory_was_performed_with_success">O inventário foi realizado com sucesso!</string>
    <string name="cannot_perform_inventory_without_items">Não é possivel realizar o inventario sem Produtos. Por favor adicione pelo menos um produto.</string>
    <string name="no_inventory_to_approve">Nenhum Inventário disponível para aprovação</string>
    <string name="inventory_approved_with_success">O inventário foi aprovado com sucesso!</string>
    <string name="error_on_approving_inventory">Ocorreu um erro ao aprovar o inventário. Por favor tente novamente.</string>
    <string name="expenses">Despesas</string>
    <string name="select_expense">Seleccionar a despesa</string>
    <string name="regist_expenses">Registar Despesas</string>
    <string name="error_on_fetching_expenses_type">Ocorreu um erro ao selecionar os tipos de despesa... Por favor tente novamente!</string>
    <string name="expenses_registed_success">Despesa(s) registada(s) com sucesso!</string>
    <string name="expense_regist_error">Ocorreu um erro ao regisar a(s) despesa(s)!</string>
    <string name="no_expenses_to_be_registered">Nenhuma despesa foi adicionada!</string>
    <string name="stock_details">Detalhes do Producto</string>
    <string name="sale_item">Item da Venda</string>
    <string name="regist_sales">Registar Vendas</string>
    <string name="billing">Facturação</string>
    <string name="add_expense">Adicionar Despesa</string>
    <string name="expenses_type">Tipos de despesa</string>
    <string name="add_stocks">Adicionar stocks</string>
    <string name="add_inventory_item">Adicionar Item do Inventário</string>
    <string name="period">Período</string>
    <string name="sales_report">Relatório de Vendas</string>
    <string name="product_on_stock">Produtos no stock</string>
    <string name="recommended_products_to_aquire">Produtos recomendados para compra</string>
    <string name="dashboard">Dashboard</string>
    <string name="main_menu">Menú principal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_was_reseted">Uma senha nova foi enviada para o seu e-mail:</string>
    <string name="username_not_exist">O número usado não existe. Por favor insira um número válido ou contacte o administrador do sistema. Obrigado</string>
    <string name="sign_up">Cadastrar-se</string>
    <string name="login">Entrar</string>
    <string name="password">Senha</string>
    <string name="user">Utilizador</string>
    <string name="next">Prosseguir</string>
    <string name="email">Email</string>
    <string name="name">Nome (primeiro e último)</string>
    <string name="welcome">Seja muito bem-vindo ao Negócio Na Mão. Um email com as credências foi enviado para</string>
    <string name="welcome_saler">Um email com as credências foi enviado ao novo utilizador para</string>
    <string name="error_on_sign_up">Ocorreu um erro ao registar o utilizador. por favor tente mais tarde.</string>
    <string name="add_new_products">Adicionar Produtos ou Serviços</string>
    <string name="update_stocks_and_services">Actualizar Stocks ou Serviços</string>
    <string name="update">Actualizar</string>
    <string name="select_product">Seleccionar o producto</string>
    <string name="add">Adicionar</string>
    <string name="grocery_without_products">Mercearia sem Produtos por actualizar. Por favor adicione.</string>
    <string name="new_products_added_with_success">Novo(s) producto(s) adicionado(s) com sucesso!</string>
    <string name="error_on_adding_products">Ocorreu um erro ao adicionar produto(s). Por favor tente mais tarde.</string>
    <string name="select_item">Seleccionar o Item</string>
    <string name="services">Serviços</string>
    <string name="service_details">Detalhe do Serviço</string>
    <string name="error_selecting_item">Ocorreu um erro ao seleccionar o item</string>
    <string name="saleable_items_created">Item(s) adicionado(s) com sucesso!</string>
    <string name="saleable_items_creation_error">Ocorreu um erro ao adicionar item(s)</string>
    <string name="saleable_without_items_not_allowed">Pelo menos um item dever ser seleccionado!</string>
    <string name="saleable_items_updated">Item(s) actualizado(s) com sucesso!</string>
    <string name="saleable_items_update_error">Ocorreu um erro ao actualizar item(s)</string>
    <string name="no_items_available">Nenhum item disponível para selecção!</string>
    <string name="update_stocks">Actualizar Produtos</string>
    <string name="add_service">Adicionar serviço</string>
    <string name="update_service">Actualizar serviço</string>
    <string name="unit_type">Tipo de Estabelecimento</string>
    <string name="accout_payment">Pagamentos</string>
    <string name="account_manager">Gestor da conta:</string>
    <string name="number_of_users">Nr. de utilizadores:</string>
    <string name="payment_methods">Formas de pagamento:</string>
    <string name="payments">Pagamentos</string>
    <string name="mpesa_number">Número Mpesa</string>
    <string name="mpesa_payment">Pagamento por Mpesa</string>
    <string name="payment_confirmation">Confirmação de pagamento</string>
    <string name="mpesa_fee_advice">*O valor total não inclui taxa de transacção do M-pesa</string>
    <string name="confirm">Confirmar</string>
    <string name="voucher_types">Tipo de Recarga</string>
    <string name="phone_number_cannot_be_less_than_9_digits">O número do telefone deve ter no mínimo 9 dígitos!</string>
    <string name="rents">Alugueres</string>
    <string name="rent">Aluguer</string>
    <string name="payment">Pagamento</string>
    <string name="devolution_guide">Guia de devolução</string>
    <string name="quotation">Cotação</string>
    <string name="days">Dia(s):</string>
    <string name="add_item">Adiconar Item</string>
    <string name="start_date_connot_be_greater_than_or_equal_the_end_date">A \'Data Inicio\' não pode ser superior ou igual a \'Data Fim\'</string>
    <string name="customers">Clientes</string>
    <string name="regist">Registar</string>
    <string name="customer_name">" Nome do cliente"</string>
    <string name="customer_address">" Endereço"</string>
    <string name="customer_phone_number">" Telefone"</string>
    <string name="customer_email">" Email"</string>
    <string name="customer_vehicle_number_plate">" Matricula do veículo"</string>
    <string name="regist_customer">Registar cliente</string>
    <string name="customer_was_successfully_registed">O cliente foi registado com sucesso!</string>
    <string name="there_was_an_error_registing_customer">Ocorreu um erro ao registar o cliente. Por favor tente novamente!</string>
    <string name="error_loading_customers">Ocorreu um erro ao carregar clientes. Por favor tente novamente!</string>
    <string name="regist_rent">Registar o aluguer</string>
    <string name="rent_registed_with_success">O aluguer foi registado com sucesso!</string>
    <string name="error_on_registing_rent">Ocorreu um erro ao registar ao aluguer. Por favor tente novamente.</string>
    <string name="error_loading_rents">Ocorreu um erro ao carregar alugueres. Tente novamente!</string>
    <string name="payment_regist">Registar pagamento</string>
    <string name="payment_success">Pagamento realizado com sucesso!</string>
    <string name="payment_error">Ocorreu um erro ao registar o pagamento. Tente novamente!</string>
    <string name="unit_without_pending_payments">Unidade sem pagamentos pendentes!</string>
    <string name="unit_without_pending_or_incomplete_devolutions">Unidade sem devoluções pendentes ou incompletas!</string>
    <string name="item_details">Detalhes do Item</string>
    <string name="select_items_to_return">Seleccione o(s) item(s) a devolverl</string>
    <string name="return_guide_was_successfully_issued">A guia de devolução foi emitida com sucesso!</string>
    <string name="error_issuing_return_guide">Ocorreu um erro ao emitir a guia de devolução! Contacte o administrador.</string>
    <string name="return_quantity_unexpected">*Quantidade acima da esperada!</string>
    <string name="payment_value_unexpected">*Valor acima do esperado</string>
    <string name="error_loading_quotation">Ocorreu um erro ao carregar a cotação. Tente novamente</string>
    <string name="select_items">Seleccione o(s) item(s) pretendido(s)</string>
    <string name="confirm_the_request">Clique \"OK\" para confirmar o pedido!</string>
    <string name="error_processing_quotation">Ocorreu um erro ao processar a cotação! Tente novamente</string>
    <string name="quotation_successfuly_processed">A cotação foi processada com sucesso!</string>
    <string name="open_with">Abrir com...</string>
    <string name="customer">Cliente</string>
    <string name="due_date">Data de Vencimento</string>
    <string name="sale_date">Data da venda</string>
    <string name="payment_status">Estado de pagamento</string>
    <string name="delivery_status">Estado da entrega</string>
</resources>