<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_drawer_main_menu"
            android:icon="@drawable/ic_home"
            android:title="@string/main_menu" />

        <item
            android:id="@+id/menu_drawer_dashboard"
            android:checkable="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

    </group>

    <item android:title="Configurações">
        <menu>
            <item
                android:id="@+id/menu_drawer_add_user"
                android:icon="@drawable/ic_add_user"
                android:title="Adicionar vendedor" />

            <item
                android:id="@+id/menu_drawer_payments"
                android:icon="@drawable/ic_money_icon"
                android:title="@string/accout_payment" />

            <item
                android:id="@+id/menu_drawer_logout"
                android:icon="@drawable/ic_power_off"
                android:title="Sair" />
        </menu>
    </item>

</menu>