<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.fragment.RegistCustomerFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_regist_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/customer_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_regist_customer_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_regist_customer_name"
        app:layout_constraintStart_toStartOf="@+id/fragment_regist_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/fragment_regist_customer_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/customer_address"
            android:inputType="textMultiLine"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_regist_customer_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_regist_customer_address"
        app:layout_constraintStart_toStartOf="@+id/fragment_regist_customer_address"
        app:layout_constraintTop_toBottomOf="@+id/fragment_regist_customer_address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/customer_phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_regist_customer_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_regist_customer_contact"
        app:layout_constraintStart_toStartOf="@+id/fragment_regist_customer_contact"
        app:layout_constraintTop_toBottomOf="@+id/fragment_regist_customer_contact">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/customer_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_regist_customer_vehicle_number_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_regist_customer_email"
        app:layout_constraintStart_toStartOf="@+id/fragment_regist_customer_email"
        app:layout_constraintTop_toBottomOf="@+id/fragment_regist_customer_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_car"
            android:hint="@string/customer_vehicle_number_plate" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_regist_customer_regist_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="#017a84"
        android:padding="8dp"
        android:text="@string/regist"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_regist_customer_vehicle_number_plate"
        app:layout_constraintStart_toStartOf="@+id/fragment_regist_customer_vehicle_number_plate" />

</androidx.constraintlayout.widget.ConstraintLayout>