<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sale.fragment.PaymentDetailsFragment">

    <View
        android:id="@+id/salePaymentDatailsView"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/salePymentDetailsImageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/ic_sale_type"
        app:layout_constraintBottom_toBottomOf="@+id/salePaymentDatailsView"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDatailsView"
        app:layout_constraintTop_toTopOf="@+id/salePaymentDatailsView" />

    <TextView
        android:id="@+id/salePaymentDetailsTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:padding="6dp"
        android:text="@string/total_sale"
        android:textAlignment="center"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/salePymentDetailsImageView"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDatailsView"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDatailsView"
        app:layout_constraintTop_toTopOf="@+id/salePaymentDatailsView" />

    <TextView
        android:id="@+id/salePaymentDetailsTotalAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDetailsTotalAmount"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDetailsTotalAmount"
        app:layout_constraintTop_toBottomOf="@+id/salePaymentDetailsTotalAmount"
        tools:text="1.000,00 MT" />

    <TextView
        android:id="@+id/salePaymentDetailsCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#017a84"
        android:padding="10dp"
        android:text="@string/customer"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDatailsView"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDatailsView"
        app:layout_constraintTop_toBottomOf="@+id/salePaymentDatailsView" />

    <TextView
        android:id="@+id/salePaymentDetailsCustomerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_borders"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDetailsCustomer"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDetailsCustomer"
        app:layout_constraintTop_toBottomOf="@+id/salePaymentDetailsCustomer"
        tools:text="Stélio Moiane" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salePaymentDetailsDueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDatailsView"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDatailsView"
        app:layout_constraintTop_toBottomOf="@+id/salePaymentDetailsCustomerName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_calendar"
            android:hint="@string/due_date"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/salePaymentDetailsPayBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#017a84"
        android:padding="8dp"
        android:text="@string/regist"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/salePaymentDetailsDueDate"
        app:layout_constraintStart_toStartOf="@+id/salePaymentDetailsDueDate"
        app:layout_constraintTop_toBottomOf="@+id/salePaymentDetailsDueDate" />


</androidx.constraintlayout.widget.ConstraintLayout>